--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,12 @@
 * {
-    color: white;
+    color:white;
 }
 
 h1 {
     margin: 0 auto;
     padding: 0 auto;
+    text-align: center;
+
 }
 
 body {
@@ -20,7 +22,7 @@ body {
 
 #menu {
     width: 50%;
-    margin: auto;
+    margin: auto;;
 }
 
 #global_header, #footer {
